--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+.container {
+    width: 80vw;
+    background-color: #33421C;
+    color: white;
+}
+
+body {
+    color: white;
+    background-color: #CFC293;
+    font-family: 'Roboto Slab', serif;
+    margin-top: 0px;
+}
+
+a, a:hover {
+    color: palegreen;
+    text-decoration: none;
+}
+
+@media (min-width: 800px) {
+    .container {
+        width: 700px;
+    }
+}
