--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -45,6 +45,8 @@
     <p>07/31/19 — Ben Eisenberger w/ Those Far Out Arrows, Mouton @ The Sydney</p>
     <p>08/02/19 — Hussies w/ No Thanks @ O'Leaver's</p>
     <p>08/10/19 — Hussies for Petfest @ Petshop</p>
+    <p>08/09/19 - 08/18/19 - Contracted guitarist for Ring of Fire @ P.A.R.T.</p>
+    <p>08/21/19 - Ben Eisenberger w/ Kelsey Magnuson @ Pageturners Lounge</p>
 
     <h3>2018</h3>
     <p> 01/05/18 — Hussies w/ The Show Is The Rainbow, Laughing Falcon @ The Sydney</p>
