--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,9 +4,9 @@
             src="http://www.beneisenberger.com/wp-content/uploads/2018/07/greentree-e1532409253910.jpg">
         <div class="ref col-2">
             <a class="block" href="http://www.facebook.com/beneisenbergermusic"><img class="button"
-                    src="./assets/facebook.png"></a>
+                    src="assets/facebook.png"></a>
             <a class="block" href="http://linkedin.com/in/beneisenberger"><img class="button"
-                    src="./assets/linkedin.png"></a>
+                    src="assets/linkedin.png"></a>
             <a class="block" href="http://github.com/beneisenberger"><img class="button" src="/assets/github.png"></a>
             <a class="block" href="https://open.spotify.com/artist/3KtcHSwAEQ3zYYDnxYaF7m"><img class="button"
                     src="/assets/spotify.png"></a>
