changing image paths for ghpages

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -8,6 +8,11 @@
     text-align: justify;
 }
 
+.main-img {
+    width: 40%;
+    height: 40%;
+}
+
 @media (min-width: 800px) {
     .button {
         width: 30px;
