--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
-        <img class="main-img col-10"
+        <img class="main-img col-lg-10 col-md-10 col-sm-12"
             src="http://www.beneisenberger.com/wp-content/uploads/2018/07/greentree-e1532409253910.jpg">
-        <div class="ref col-2">
+        <div class="ref col-sm-12 col-md-2 col-lg-2">
             <a class="block" href="http://www.facebook.com/beneisenbergermusic"><img class="button"
                     src="/assets/facebook.png"></a>
             <a class="block" href="http://linkedin.com/in/beneisenberger"><img class="button"
@@ -14,9 +14,9 @@
                     src="/assets/bandcamp.png"></a>
             <a class="block" href="http://instagram.com/beneisenberger"><img class="button"
                     src="/assets/instagram.png"></a>
-            <a class="block" href="http://twitter.com/beneisenberger"><img class="button" src="/assets/twitter.png"></a>
+            <a class="block" href="http://twitter.com/beneisenberger"><img class="button" src="Personal-Site/assets/twitter.png"></a>
             <a class="block" href="http://youtube.com/user/bristlehead"><img class="button"
-                    src="/assets/youtube.png"></a>
+                    src="Personal-Site/assets/youtube.png"></a>
         </div>
     </div>
 
