--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,19 +4,19 @@
             src="http://www.beneisenberger.com/wp-content/uploads/2018/07/greentree-e1532409253910.jpg">
         <div class="ref col-sm-12 col-md-2 col-lg-2">
             <a class="block" href="http://www.facebook.com/beneisenbergermusic"><img class="button"
-                    src="Personal-Site/assets/facebook.png"></a>
+                    src="./assets/facebook.png"></a>
             <a class="block" href="http://linkedin.com/in/beneisenberger"><img class="button"
-                    src="Personal-Site/assets/linkedin.png"></a>
-            <a class="block" href="http://github.com/beneisenberger"><img class="button" src="/assets/github.png"></a>
+                    src="./assets/linkedin.png"></a>
+            <a class="block" href="http://github.com/beneisenberger"><img class="button" src="./assets/github.png"></a>
             <a class="block" href="https://open.spotify.com/artist/3KtcHSwAEQ3zYYDnxYaF7m"><img class="button"
-                    src="/assets/spotify.png"></a>
+                    src="./assets/spotify.png"></a>
             <a class="block" href="http://beneisenberger.bandcamp.com"><img class="button"
-                    src="/assets/bandcamp.png"></a>
+                    src="./assets/bandcamp.png"></a>
             <a class="block" href="http://instagram.com/beneisenberger"><img class="button"
-                    src="/assets/instagram.png"></a>
-            <a class="block" href="http://twitter.com/beneisenberger"><img class="button" src="Personal-Site/assets/twitter.png"></a>
+                    src="./assets/instagram.png"></a>
+            <a class="block" href="http://twitter.com/beneisenberger"><img class="button" src="./assets/twitter.png"></a>
             <a class="block" href="http://youtube.com/user/bristlehead"><img class="button"
-                    src="Personal-Site/assets/youtube.png"></a>
+                    src="./assets/youtube.png"></a>
         </div>
     </div>
 
