--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,16 @@
-<div class="container">
-    <nav class="row navbar">
-        <a class="nav-link col-2" routerLink="/blog" routerLinkActive="active">Blog</a>
-        <a class="nav-link col-2" routerLink="/about" routerLinkActive="active">About</a>
-        <a class="nav-link col-2" routerLink="/code" routerLinkActive="active">Web Dev</a>
-        <a class="nav-link col-2" routerLink="/media" routerLinkActive="active">Music</a>
-        <a class="nav-link col-2" routerLink="/events" routerLinkActive="active">Events</a>
-        <a class="nav-link col-2" routerLink="/contact" routerLinkActive="active">Contact</a>
-    </nav>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <span class="navbar-brand" href="#">Navbar</span>
+        <button (click)="isCollapsed = !isCollapsed" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [collapse]=isCollapsed>
+          <div class="navbar-nav">
+                <a class="nav-item nav-link" routerLink="/blog">Blog</a>
+            <a class="nav-item nav-link active" routerLink="/about">About<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" routerLink="/code">Code</a>
+            <a class="nav-item nav-link" routerLink="/media">Media</a>
+            <a class="nav-item nav-link" routerLink="/events">Events</a>
+            <a class="nav-item nav-link" routerLink="/contact">Contact</a>
+          </div>
+        </div>
+</nav>
