--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
 .container {
-    width: 80vw;
     background-color: #33421C;
     color: white;
 }
@@ -16,13 +15,13 @@ a, a:hover {
     text-decoration: none;
 }
 
-@media (lg) {
+@media (min-width: 600px) {
     .container {
-        width: 700px;
+        width: 800px;
     }
 }
 
-@media (md) {
+@media (max-width: 599px) {
     .container {
         width: 100%;
     }
