changes to styling, fixed breakpoints

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,23 +1,7 @@
-<div class="container">
+<div class="container col-12">
     <div class="row">
-        <img class="main-img col-lg-10 col-md-10 col-sm-12"
+        <img class="main-img col-12"
             src="http://www.beneisenberger.com/wp-content/uploads/2018/07/greentree-e1532409253910.jpg">
-        <div class="ref col-sm-12 col-md-2 col-lg-2">
-            <a class="block" href="http://www.facebook.com/beneisenbergermusic"><img class="button"
-                    src="./assets/facebook.png"></a>
-            <a class="block" href="http://linkedin.com/in/beneisenberger"><img class="button"
-                    src="./assets/linkedin.png"></a>
-            <a class="block" href="http://github.com/beneisenberger"><img class="button" src="./assets/github.png"></a>
-            <a class="block" href="https://open.spotify.com/artist/3KtcHSwAEQ3zYYDnxYaF7m"><img class="button"
-                    src="./assets/spotify.png"></a>
-            <a class="block" href="http://beneisenberger.bandcamp.com"><img class="button"
-                    src="./assets/bandcamp.png"></a>
-            <a class="block" href="http://instagram.com/beneisenberger"><img class="button"
-                    src="./assets/instagram.png"></a>
-            <a class="block" href="http://twitter.com/beneisenberger"><img class="button" src="./assets/twitter.png"></a>
-            <a class="block" href="http://youtube.com/user/bristlehead"><img class="button"
-                    src="./assets/youtube.png"></a>
-        </div>
     </div>
 
     <div class="row">
@@ -46,5 +30,23 @@
         </section>
     </div>
 
+    <div class="ref col-12">
+            <a class="block" href="http://www.facebook.com/beneisenbergermusic"><img class="button"
+                    src="./assets/facebook.png"></a>
+            <a class="block" href="http://linkedin.com/in/beneisenberger"><img class="button"
+                    src="./assets/linkedin.png"></a>
+            <a class="block" href="http://github.com/beneisenberger"><img class="button" 
+                src="./assets/github.png"></a>
+            <a class="block" href="https://open.spotify.com/artist/3KtcHSwAEQ3zYYDnxYaF7m"><img class="button"
+                    src="./assets/spotify.png"></a>
+            <a class="block" href="http://beneisenberger.bandcamp.com"><img class="button"
+                    src="./assets/bandcamp.png"></a>
+            <a class="block" href="http://instagram.com/beneisenberger"><img class="button"
+                    src="./assets/instagram.png"></a>
+            <a class="block" href="http://twitter.com/beneisenberger"><img class="button"
+                    src="./assets/twitter.png"></a>
+            <a class="block" href="http://youtube.com/user/bristlehead"><img class="button"
+                    src="./assets/youtube.png"></a>
+        </div>
 
 </div>
