--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,14 +1,40 @@
-<div class="example-container">
-    <mat-form-field>
-        <input matInput placeholder="Input">
-    </mat-form-field>
-    <mat-form-field>
-        <textarea matInput placeholder="Textarea"></textarea>
-    </mat-form-field>
+<div class="container">
+    <div class="sub-container">
 
-    <mat-form-field>
-        <mat-select placeholder="Select">
-            <mat-option value="option">Option</mat-option>
-        </mat-select>
-    </mat-form-field>
+    <h2 class="center">Contact Form / Email List</h2>
+
+    <p class="inner-text"> Please feel free to get in touch with me about booking opportunities, lessons, or any other general inquries
+        you may have.</p>
+
+        <form>
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                    placeholder="Email Address">
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="emailList">
+                    <label class="form-check-label" for="emailList">Get updates about important shows, releases, tours,
+                        etc?</label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Name">
+            </div>
+
+            <div class="form-group">
+                <label for="zipcode">Zip Code</label>
+                <input type="text" class="form-control" id="zipcode" placeholder="Zip Code">
+            </div>
+
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message" rows="5" placeholder="Message"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary submit-button">Submit</button>
+        </form>
+
+    </div>
 </div>
