--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="container">
     <mat-card *ngFor="let post of posts | async">
         <mat-card-content routerLink="{{post.id}}">
             <img src="{{post.image}}" alt="{{post.title}}">
