fixed routing for deployment

--- a/src/app/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/posts/post-dashboard/post-dashboard.component.html
@@ -1,5 +1,5 @@
 <section>
-    <mat-acordion>
+    <mat-accordion>
         <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
@@ -27,5 +27,5 @@
         <br>
         <button mat-raised-button color="accent" (click)="createPost()" [disabled]="!title || !content || !image">{{buttonText}}</button>
         </mat-expansion-panel>
-    </mat-acordion>
+    </mat-accordion>
 </section>
