--- a/src/app/posts/post-detail/post-detail.component.html
+++ b/src/app/posts/post-detail/post-detail.component.html
@@ -18,7 +18,7 @@
 <div [hidden]="editing">
     <mat-card>
         <img src="{{post.image}}" alt="{{post.title}}">
-        <p>posted by {{post.author}} &bull; {{post.published.seconds * 1000 | date: 'fullDate'}}</p>
+        <p>posted by {{post.author}} &bull; {{post.published | date:'fullDate'}}</p>
         <mat-card-content>
             <h2>{{post.title}}</h2>
             <p>{{post.content}}</p>
