--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -3,10 +3,10 @@
         <mat-card-content routerLink="{{post.id}}">
             <img src="{{post.image}}" alt="{{post.title}}">
             <h2>{{post.title}}</h2>
-            <p><small>Posted by {{post.author}} &bull; on {{post.published.seconds * 1000 | date: 'fullDate'}}</small></p>
+            <p><small>Posted by {{post.author}} &bull; on {{post.published | date:'fullDate'}}</small></p>
         </mat-card-content>
         <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
-            <button mat-icon-button (click)="delete(post.id)">
+            <button mat-icon-button color="primary" (click)="delete(post.id)">
                 <mat-icon>delete</mat-icon>
             </button>
         </mat-card-actions>
