--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,32 @@
-<div class="container">
+     <!-- <div class="container">
+       <mat-form-field>
+                <input matInput placeholder="Email" [formControl]="email" required>
+                <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                <mat-checkbox [formControl]="yes">Subscribe to email list for updates on tours, album releases, etc?</mat-checkbox>
+              </mat-form-field>
+              
+                <mat-form-field>
+                  <input matInput placeholder="Name" [formControl]="name" required>
+                </mat-form-field>
+
+                <mat-form-field>
+                        <input matInput placeholder="Zip Code" [formControl]="zip" required>
+                        <mat-error *ngIf="zipcode.invalid">{{getErrorMessage()}}</mat-error>
+                      </mat-form-field>
+              
+                <mat-form-field>
+                  <mat-select placeholder="Select">
+                    <mat-option value="option">Option</mat-option>
+                  </mat-select>
+                </mat-form-field>
+
+            </div>   -->
+
+
+<div class="container col-12">
     <div class="sub-container">
 
-    <h2 class="center">Contact Form / Email List</h2>
+    <h2 class="center title">Contact Form / Email List</h2>
 
     <p class="inner-text"> Please feel free to get in touch with me about booking opportunities, lessons, or any other general inquries
         you may have.</p>
