--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,34 +1,50 @@
-<div class="container">
+<div class="container col-12">
 
-    <h1 class="center">Media</h1>
+    <h2 class="center title">Music</h2>
 
-    <h2 class="center">+ music</h2>
 
     <section class="music-embed row">
-            <div class="col-4"></div>
-            <div class="col-4"></div>
         <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
             src="https://bandcamp.com/EmbeddedPlayer/album=1720225765/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
             seamless><a href="http://beneisenberger.bandcamp.com/album/three-islands">Three Islands by Ben
                 Eisenberger</a></iframe>
+        <div class="col-8">
+            <h3>Ben Eisenberger</h3>
+            <p>Pretty and pensive acoustic songs written by myself.</p>
+            <h3>Releases:</h3>
+            <p>Three Islands (2018)</p>
+        </div>
 
         <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
             src="https://bandcamp.com/EmbeddedPlayer/album=3402947417/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
             seamless><a href="http://hussiesband.bandcamp.com/album/fast">Fast by Hussies</a></iframe>
-        <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
-            src="https://bandcamp.com/EmbeddedPlayer/album=3210570509/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-            seamless><a href="http://hussiesband.bandcamp.com/album/nowhere">Nowhere by Hussies</a></iframe>
+        <div class="col-8">
+            <h3>Hussies</h3>
+            <p>Classic boys, we love the boys.</p>
+            <h3>Releases:</h3>
+            <p>Going (2015)<br>Nowhere (2017)<br>Fast (2019)</p>
+        </div>
 
         <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
             src="https://bandcamp.com/EmbeddedPlayer/album=374132353/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-            seamless><a href="http://screamingplastic.bandcamp.com/album/screaming-plastic-2">Screaming Plastic by
+            seamless><a href="http://screamingplastic.bandcamp.com/album/screaming-plastic-2">Screaming Plastic
+                by
                 Screaming Plastic</a></iframe>
-        <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
-            src="https://bandcamp.com/EmbeddedPlayer/album=880435993/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-            seamless><a href="http://screamingplastic.bandcamp.com/album/live-improvisations-2">Live Improvisations 2 by
-                Screaming Plastic</a></iframe>
+        <div class="col-8">
+            <h3>Screaming Plastic</h3>
+            <p>My solo stuff. This is pretty much all I have to say about that!</p>
+            <h3>Releases:</h3>
+            <p>Live Improvisations (2017)<br>Live Improvisations 2 (2017)<br>Screaming Plastic (2019)</p>
+        </div>
 
         <iframe class="col-4" style="border: 0; width: 250px; height: 392px;"
             src="https://bandcamp.com/EmbeddedPlayer/album=2552986554/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/"
-            seamless><a href="http://fifinono.bandcamp.com/album/fifi-nono">FiFi NoNo by FiFi NoNo</a></iframe>
+            seamless><a href="http://fifinono.bandcamp.com/album/fifi-nono">FiFi NoNo by FiFi
+                NoNo</a></iframe>
+        <div class="col-8">
+            <h3>FiFi NoNo</h3>
+            <p>Not these boys tho</p>
+            <h3>Releases:</h3>
+            <p>Songs for the Anxious (2017)<br>FiFi NoNo (2018)</p>
+        </div>
     </section>
