--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,8 +1,11 @@
-.nav-item {
-    display: inline-block;
-    margin: 0 auto;
-    text-align: center;
-    width: 15%;
+.nav-width {
+    margin: auto;
+    background-color: #262626;
+}
+
+.navbar-nav {
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 span:focus {
@@ -20,7 +23,7 @@ span {
 }
 
 .navbar {
-    background-color: #333333;
+    background-color: #262626;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
