--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,14 @@
     color: white;
 }
 
+.center {
+    text-align: center;
+}
+
+.title {
+    padding: 15px 0;
+}
+
 body {
     color: white;
     background-color: #262626;
