--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h2 class="title center">Calendar</h2> 
 <br>
     <h3>Upcoming</h3>
     <p>08/09/19 - 08/18/19 - Contracted guitarist for Ring of Fire @ P.A.R.T.</p>
