--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,12 +4,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [collapse]=isCollapsed>
           <div class="navbar-nav">
-            <a class="nav-item nav-link" routerLink="/blog">Blog</a>
-            <a class="nav-item nav-link active" routerLink="/about">About<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" routerLink="/code">Code</a>
-            <a class="nav-item nav-link" routerLink="/media">Media</a>
-            <a class="nav-item nav-link" routerLink="/events">Events</a>
-            <a class="nav-item nav-link" routerLink="/contact">Contact</a>
+            <div class="nav-width"><a class="nav-item nav-link" routerLink="/blog">Blog</a></div>
+            <div class="nav-width"><a class="nav-item nav-link active" routerLink="/about">About<span class="sr-only">(current)</span></a></div>
+            <div class="nav-width"><a class="nav-item nav-link" routerLink="/code">Code</a></div>
+            <div class="nav-width"><a class="nav-item nav-link" routerLink="/media">Music</a></div>
+            <div class="nav-width"><a class="nav-item nav-link" routerLink="/events">Events</a></div>
+            <div class="nav-width"><a class="nav-item nav-link" routerLink="/contact">Contact</a></div>
           </div>
         </div>
 </nav>
