--- a/src/app/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/posts/post-dashboard/post-dashboard.component.html
@@ -1,12 +1,5 @@
 <section>
-    <mat-accordion>
-        <mat-expansion-panel>
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Create a Post
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
+                <h3>Create a Post</h3>
         <div>
             <input type="file" name="file" id="file" (change)="uploadImage($event)">
             <div [hidden]="!uploadPercent">
@@ -26,6 +19,4 @@
         </mat-form-field>
         <br>
         <button mat-raised-button color="accent" (click)="createPost()" [disabled]="!title || !content || !image">{{buttonText}}</button>
-        </mat-expansion-panel>
-    </mat-accordion>
 </section>
