--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-    color: white;
+    color: white !important;
     background-color: #262626;
     font-family: 'Roboto Slab', serif;
     margin-top: 0px;
