--- a/src/app/code/code.component.html
+++ b/src/app/code/code.component.html
@@ -4,7 +4,7 @@
 <mat-card class="example-card" *ngFor="let individual of individual">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title class="title">{{individual.name}} - [<a href="{{individual.github}}">view code</a>] [<a href="{{individual.link}}">view site</a>]</mat-card-title>
+      <mat-card-title class="title">{{individual.name}} - [<a href="{{individual.github}}" target="_blank">view code</a>]</mat-card-title>
     </mat-card-header>
     <img class="margin" mat-card-image src="{{individual.img}}">
     <mat-card-content>
@@ -16,7 +16,7 @@
 <mat-card class="example-card" *ngFor="let group of group">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title class="title">{{group.name}} - [<a href="{{group.github}}">view code</a>] [<a href="{{group.link}}">view site</a>]</mat-card-title>
+      <mat-card-title class="title">{{group.name}} - [<a href="{{group.github}}" target="_blank">view code</a>]</mat-card-title>
     </mat-card-header>
     <img mat-card-image src="{{group.img}}">
     <mat-card-content>
