fixed more of blog

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -14,6 +14,10 @@ span {
     cursor: pointer;
 }
 
+mat-toolbar {
+    padding-top: 63px;
+}
+
 @media (max-width: 768px) {
     mat-toolbar {
         width: 100%;
