--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -10,7 +10,7 @@
                 Eisenberger</a></iframe>
         <div class="col-8">
             <h3>Ben Eisenberger</h3>
-            <p>Pretty and pensive acoustic songs written by myself.</p>
+            <p>Pretty and pensive acoustic songs written by myself. In my dreams I would liken my style to a kind of Nick Drake-Joni Mitchell-Joanna Newsom hybrid. The album <i>Three Islands</i> was inspired by, and in fact my solo music writing in general was started by, a trip I took in 2016 to Southeast Asia. A forthcoming record is currently being recorded and will include more instuments, but of course with the same somber timbre as my debut.</p>
             <h3>Releases:</h3>
             <p>Three Islands (2018)</p>
         </div>
@@ -20,7 +20,7 @@
             seamless><a href="http://hussiesband.bandcamp.com/album/fast">Fast by Hussies</a></iframe>
         <div class="col-8">
             <h3>Hussies</h3>
-            <p>Classic boys, we love the boys.</p>
+            <p>Hussies has been around since 2012, and plays regularly in Omaha with locals and honestly whoever happens to be stopping through. Fronted by best bud and fellow acoustic crooner Tom Bartolomei, Hussies carries more rock aesthetic... what critics are calling the "new Omaha sound" (we wish).</p>
             <h3>Releases:</h3>
             <p>Going (2015)<br>Nowhere (2017)<br>Fast (2019)</p>
         </div>
@@ -32,7 +32,7 @@
                 Screaming Plastic</a></iframe>
         <div class="col-8">
             <h3>Screaming Plastic</h3>
-            <p>My solo stuff. This is pretty much all I have to say about that!</p>
+            <p>Screaming Plastic is a collective of myself, Phill Smith (electronics), Hanah Mayer (cello) and Jeff Kolega (drums). We are a quartet that records live free improvisations, usually just recorded by myself on my cell phone. In 2017 we received a grant from New Music USA to record a proper debut album, which was released in early 2019.</p>
             <h3>Releases:</h3>
             <p>Live Improvisations (2017)<br>Live Improvisations 2 (2017)<br>Screaming Plastic (2019)</p>
         </div>
@@ -43,7 +43,7 @@
                 NoNo</a></iframe>
         <div class="col-8">
             <h3>FiFi NoNo</h3>
-            <p>Not these boys tho</p>
+            <p>The brainchild of Mike Zimmerman (Flesh-Eating Skin Disease, DROSS) and fronted by Blake Kostszewa (Shrinks) - this is definitely the "rowdy boys" group. We play(?)ed a mixture of goth punk/noise punk/hardcore and basically just like to have a good time. I think this band might be getting back together? I'm not sure. Look for that.</p>
             <h3>Releases:</h3>
             <p>Songs for the Anxious (2017)<br>FiFi NoNo (2018)</p>
         </div>
