--- a/src/app/code/code.component.scss
+++ b/src/app/code/code.component.scss
@@ -3,7 +3,7 @@
     width: calc(100% - 40px);
 }
 
-.title {
+.title2 {
     text-align: center;
     padding: 0 30px;
 }
@@ -11,4 +11,5 @@
 
 mat-card {
     margin: 30px;
+    background-color: lightgrey;
 }
