--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 }
 
 .title {
-    padding: 15px 0;
+    padding: 100px 0 50px 0;
 }
 
 body {
@@ -22,6 +22,15 @@ a, a:hover {
     color: palegreen;
     text-decoration: none;
 }
+
+.mat-form-field-appearance-legacy {
+    .mat-form-field-underline{
+    background-color: palegreen;
+    }
+    .mat-form-field-label{
+        color: white;
+    }
+ }
 
 @media (max-width: 768px) {
     .container {
