--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,15 +1,76 @@
-<nav class="navbar navbar-expand-md fixed-top">
-        <button (click)="isCollapsed = !isCollapsed" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [collapse]=isCollapsed>
-          <div class="navbar-nav">
-            <div class="nav-width"><a class="nav-item nav-link" routerLink="/blog">Blog</a></div>
-            <div class="nav-width"><a class="nav-item nav-link active" routerLink="/about">About<span class="sr-only">(current)</span></a></div>
-            <div class="nav-width"><a class="nav-item nav-link" routerLink="/code">Code</a></div>
-            <div class="nav-width"><a class="nav-item nav-link" routerLink="/media">Music</a></div>
-            <div class="nav-width"><a class="nav-item nav-link" routerLink="/events">Events</a></div>
-            <div class="nav-width"><a class="nav-item nav-link" routerLink="/contact">Contact</a></div>
-          </div>
-        </div>
-</nav>
+<div class="container">
+
+<mdb-navbar SideClass="navbar navbar-expand-md navbar-dark" [containerInside]="false">
+  <!-- Collapsible content -->
+  <links>
+
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="/blog">Blog</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="/about">About<span
+            class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="/code">Code</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="/media">Music</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="/events">Events</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link waves-light" mdbWavesEffect routerLink="/contact">Contact</a>
+      </li>
+
+    </ul>
+
+    <ul class="navbar-nav ml-auto nav-flex-icons">
+      <li class="nav-item">
+        <a class="nav-link" href="http://linkedin.com/in/beneisenberger" target="_blank">
+          <mdb-icon fab icon="linkedin"></mdb-icon>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://twitter.com/beneisenberger" target="_blank">
+          <mdb-icon fab icon="twitter"></mdb-icon>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://www.facebook.com/beneisenbergermusic" target="_blank">
+          <mdb-icon fab icon="facebook"></mdb-icon>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://instagram.com/beneisenberger" target="_blank">
+          <mdb-icon fab icon="instagram"></mdb-icon>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://open.spotify.com/artist/3KtcHSwAEQ3zYYDnxYaF7m" target="_blank">
+          <mdb-icon fab icon="spotify"></mdb-icon>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://github.com/beneisenberger" target="_blank">
+          <mdb-icon fab icon="github"></mdb-icon>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://youtube.com/user/bristlehead" target="_blank">
+          <mdb-icon fab icon="youtube"></mdb-icon>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://beneisenberger.bandcamp.com" target="_blank">
+          <mdb-icon fab icon="bandcamp"></mdb-icon>
+        </a>
+      </li>
+    </ul>
+  </links>
+
+</mdb-navbar>
+
+</div>
