fixed weird main-image padding

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,9 @@
 <div class="container col-12">
-    <div class="row">
+    <div>
         <img class="main-img col-12"
-            src="http://www.beneisenberger.com/wp-content/uploads/2018/07/greentree-e1532409253910.jpg">
+            src="./assets/benmain.jpg">
     </div>
-
-    <div class="row">
+    
         <section>
             <div class="bio">
                 <p>Ben Eisenberger is an Omaha, Nebraska-based guitarist and songwriter, and a graduate
@@ -28,6 +27,4 @@
                 </p>
             </div>
         </section>
-    </div>
-
 </div>
