--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar>
     <mat-toolbar-row>
         <i>in case you wanted to know</i>
         <span class="spacer"></span>
