--- a/src/app/code/code.component.scss
+++ b/src/app/code/code.component.scss
@@ -3,13 +3,11 @@
     width: calc(100% - 40px);
 }
 
-.title2 {
-    text-align: center;
-    padding: 0 30px;
-}
-
-
 mat-card {
     margin: 30px;
     background-color: lightgrey;
+}
+
+a {
+    color: navy;
 }
