--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -2,10 +2,10 @@
     width: 769px;
 }
 
-.navbar-toggler {
-    background-color: white;
-    margin-left: auto;
-}
+// .navbar-toggler {
+//     background-color: white;
+//     margin-left: auto;
+// }
 
 
 @media (max-width: 768px) {
