--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,10 +1,3 @@
-.ref {
-    display: flex;
-    justify-content: space-between; // flex-start | flex-end | center | space-around;
-    align-items: stretch;
-    padding: 40px 50px;
-}
-
 .button {
     display: inline-block;
     width: 40px;
@@ -12,12 +5,11 @@
 }
 
 .bio {
-    margin: 50px 50px;  
+    margin: 5%;  
     text-align: justify;
 }
 
 .main-img {
-    width: 100%;
     object-fit: contain;
-    padding-top: 15px;
+    padding-top: 5%;
 }
