--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container col-12">
 
 <mdb-navbar SideClass="navbar navbar-expand-md navbar-dark" [containerInside]="false">
   <!-- Collapsible content -->
